--- a/myApp01/src/app/app.component.html
+++ b/myApp01/src/app/app.component.html
@@ -1,1 +1,9 @@
-<button class="btn btn-info">Siva Naga</button>
+<div>
+  <!-- app-app0201 -->
+  <app-app0201></app-app0201>
+
+  <!-- app-app0202 -->
+  <!-- <app-app0202></app-app0202> -->
+
+  <!--  -->
+</div>
