--- a/myApp01/src/app/app.component.html
+++ b/myApp01/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div>
   <!-- app-app0201 -->
-  <app-app0201></app-app0201>
+  <App0201></App0201>
 
   <!-- app-app0202 -->
-  <!-- <app-app0202></app-app0202> -->
+  <!-- <App0202></App0202> -->
 
   <!--  -->
 </div>
