--- a/myApp01/src/app/app.component.html
+++ b/myApp01/src/app/app.component.html
@@ -1,9 +1,15 @@
+<h1>I am the App component</h1>
+<hr />
 <div>
   <!-- app-app0201 -->
-  <App0201></App0201>
+  <!-- <App0201></App0201> -->
 
   <!-- app-app0202 -->
   <!-- <App0202></App0202> -->
 
-  <!--  -->
+  <!-- server App-server0301 -->
+  <!-- <App-server0301></App-server0301> -->
+
+  <!-- server App-server0302 -->
+  <App-server0302></App-server0302>
 </div>
