--- a/myApp01/src/app/app.component.html
+++ b/myApp01/src/app/app.component.html
@@ -1,6 +1,6 @@
 <h1>I am the App component</h1>
 <hr />
-<div>
+<div class="002">
   <!-- app-app0201 -->
   <!-- <App0201></App0201> -->
 
@@ -11,5 +11,8 @@
   <!-- <App-server0301></App-server0301> -->
 
   <!-- server App-server0302 -->
-  <App-server0302></App-server0302>
+  <!-- <App-server0302></App-server0302> -->
+
+  <!-- AttributeSelector04Component -->
+  <div app-attribute-selector04></div>
 </div>
