--- a/myApp01/src/app/app.component.html
+++ b/myApp01/src/app/app.component.html
@@ -14,5 +14,8 @@
   <!-- <App-server0302></App-server0302> -->
 
   <!-- AttributeSelector04Component -->
-  <div app-attribute-selector04></div>
+  <!-- <div app-attribute-selector04></div> -->
+
+  <!-- ClassSelector05Component -->
+  <div class="app-class-selector05"></div>
 </div>
