--- a/myApp01/src/app/app.component.html
+++ b/myApp01/src/app/app.component.html
@@ -18,4 +18,8 @@
 
   <!-- ClassSelector05Component -->
   <div class="app-class-selector05"></div>
+
+  <div class="app-class-selector05"></div>
+  <App-server0301></App-server0301>
+
 </div>
