--- a/myApp01/src/app/app.component.html
+++ b/myApp01/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h1>I am the App component</h1>
-<hr />
+<hr/>
 <div class="002">
   <!-- app-app0201 -->
   <!-- <App0201></App0201> -->
@@ -17,9 +17,14 @@
   <!-- <div app-attribute-selector04></div> -->
 
   <!-- ClassSelector05Component -->
-  <div class="app-class-selector05"></div>
+  <!--  <div class="app-class-selector05"></div>-->
 
-  <div class="app-class-selector05"></div>
-  <App-server0301></App-server0301>
+  <!--  Documnet06Component-->
+  <!--  <app-documnet06></app-documnet06>-->
 
+  <!--  StringInterpolation07Component-->
+  <!--  <app-string-interpolation07></app-string-interpolation07>-->
+
+  <!--  PropertyBinding0701Component-->
+  <app-property-binding0701></app-property-binding0701>
 </div>
