--- a/myApp01/src/app/app.component.html
+++ b/myApp01/src/app/app.component.html
@@ -26,5 +26,11 @@
   <!--  <app-string-interpolation07></app-string-interpolation07>-->
 
   <!--  PropertyBinding0701Component-->
-  <app-property-binding0701></app-property-binding0701>
+  <!--  <app-property-binding0701></app-property-binding0701>-->
+
+  <!--  EventBinding0702Component-->
+  <!--  <app-event-binding0702></app-event-binding0702>-->
+  <!--  PassingData0703Component-->
+  <app-passing-data0703></app-passing-data0703>
+
 </div>
