assignment0803.component completed

--- a/myApp01/src/app/002The Basics/passing-data0703/passing-data0703.component.html
+++ b/myApp01/src/app/002The Basics/passing-data0703/passing-data0703.component.html
@@ -1,1 +1,9 @@
-<p>passing-data0703 works!</p>
+<label for="formElement">userName</label>
+<input (input)=onInput($event)
+       class="form-control"
+       id="formElement"
+       name="formElement"
+       placeholder="Enter userName"
+       type="text">
+<p>Print USerName</p>
+<h1>{{ userName }}</h1>
