--- a/myApp01/src/app/app.component.html
+++ b/myApp01/src/app/app.component.html
@@ -31,6 +31,14 @@
   <!--  EventBinding0702Component-->
   <!--  <app-event-binding0702></app-event-binding0702>-->
   <!--  PassingData0703Component-->
-  <app-passing-data0703></app-passing-data0703>
+  <!--  <app-passing-data0703></app-passing-data0703>-->
 
+  <!--  TwoWayBinding08Component-->
+  <!--  <app-two-way-binding08></app-two-way-binding08>-->
+
+  <!--  CombiningAllTypesOfBindings0802Component-->
+  <!--  <app-combining-alltypes-of-bindings0802></app-combining-alltypes-of-bindings0802>-->
+
+  <!--  Assignment0803Component-->
+  <app-assignment0803></app-assignment0803>
 </div>
