--- a/myApp01/src/app/app.component.html
+++ b/myApp01/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h1>I am the App component</h1>
-<hr/>
+<hr />
 <div class="002">
   <!-- app-app0201 -->
   <!-- <App0201></App0201> -->
@@ -40,5 +40,15 @@
   <!--  <app-combining-alltypes-of-bindings0802></app-combining-alltypes-of-bindings0802>-->
 
   <!--  Assignment0803Component-->
-  <app-assignment0803></app-assignment0803>
+  <!--  <app-assignment0803></app-assignment0803>-->
+
+  <!-- Directive09Component -->
+  <!-- <h1 app-directive09>
+    Siva Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
+    corrupti, soluta natus dolores id facere dolorum saepe laborum mollitia.
+    Quidem corrupti magni iste iure nam obcaecati magnam at dignissimos dolor.
+  </h1> -->
+
+  <!--  NgifDirective0901Component-->
+  <app-ngif-directive0901></app-ngif-directive0901>
 </div>
