--- a/myApp01/src/app/app.component.html
+++ b/myApp01/src/app/app.component.html
@@ -50,5 +50,5 @@
   </h1> -->
 
   <!--  NgifDirective0901Component-->
-  <app-ngif-directive0901></app-ngif-directive0901>
+  <app-NgifDirective0901></app-NgifDirective0901>
 </div>
