--- a/myApp01/src/app/app.component.html
+++ b/myApp01/src/app/app.component.html
@@ -50,5 +50,11 @@
   </h1> -->
 
   <!--  NgifDirective0901Component-->
-  <app-NgifDirective0901></app-NgifDirective0901>
+  <!-- <app-NgifDirective0901></app-NgifDirective0901> -->
+
+  <!-- NgIfThenElse0902Component -->
+  <!-- <app-ngIfThenElse0902></app-ngIfThenElse0902> -->
+
+  <!-- NgSwitch0903Component -->
+  <app-ngSwitch0903></app-ngSwitch0903>
 </div>
