--- a/myApp01/src/app/app.component.html
+++ b/myApp01/src/app/app.component.html
@@ -56,5 +56,11 @@
   <!-- <app-ngIfThenElse0902></app-ngIfThenElse0902> -->
 
   <!-- NgSwitch0903Component -->
-  <app-ngSwitch0903></app-ngSwitch0903>
+  <!-- <app-ngSwitch0903></app-ngSwitch0903> -->
+
+  <!-- NgStyleAndngClass0904Component -->
+  <!-- <app-ngStyleAndngClass0904></app-ngStyleAndngClass0904> -->
+
+  <!-- NgFor0905Component -->
+  <app-ngFor0905></app-ngFor0905>
 </div>
