--- a/myApp01/src/app/app.component.html
+++ b/myApp01/src/app/app.component.html
@@ -68,12 +68,17 @@
 <!-- <app-Assignmnet10></app-Assignmnet10> -->
 <!-- </div> -->
 
+<div class="003">
+  <!-- A003CourseProjectComponent -->
+  <A003CourseProject></A003CourseProject>
+</div>
+
 <!-- <div class="004"> -->
 <!-- A004debuggingComponent -->
 <!-- <app-A004debugging></app-A004debugging> -->
 <!-- </div> -->
 
-<div class="005">
-  <!-- A005DatabindingDeepDiveComponent -->
-  <app-A005DatabindingDeepDive></app-A005DatabindingDeepDive>
-</div>
+<!-- <div class="005"> -->
+<!-- A005DatabindingDeepDiveComponent -->
+<!-- <app-A005DatabindingDeepDive></app-A005DatabindingDeepDive> -->
+<!-- </div> -->
