now scss is working

--- a/myApp01/src/app/A003CourseProject/A003CourseProject.component.html
+++ b/myApp01/src/app/A003CourseProject/A003CourseProject.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-12">
       <h2>I'm working!</h2>
-      <button type="button" class="btn btn-primary">lllll</button>
+      <button type="button" class="btn btn-primary siva">lllll</button>
       <B001HeaderComponet></B001HeaderComponet>
       <B002ShoppingList></B002ShoppingList>
       <B003RecipeBook></B003RecipeBook>
