--- a/myApp01/src/app/app.component.html
+++ b/myApp01/src/app/app.component.html
@@ -68,7 +68,7 @@
 <!-- <app-Assignmnet10></app-Assignmnet10> -->
 <!-- </div> -->
 
-<div class="003">
+<div class="003 siva">
   <!-- A003CourseProjectComponent -->
   <A003CourseProject></A003CourseProject>
 </div>
