--- a/myApp01/src/styles.scss
+++ b/myApp01/src/styles.scss
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  .no-padding-margin {
+    padding: 0;
+    margin: 0%;
+  }
+  .siva {
+    .row,
+    p,
+    .container,
+    .container-fluid,
+    .col {
+      outline: 1px solid aquamarine;
+      margin: 0%;
+      padding: 0%;
+    }
+  }
+}
