--- a/myApp01/src/app/A003CourseProject/A003CourseProject.component.html
+++ b/myApp01/src/app/A003CourseProject/A003CourseProject.component.html
@@ -1,10 +1,10 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <h2>I'm working!</h2>
-      <button type="button" class="btn btn-primary siva">lllll</button>
-      <B001HeaderComponet></B001HeaderComponet>
+<div class="container-fluid">
+  <B001HeaderComponet></B001HeaderComponet>
+  <div class="row no-padding-margin">
+    <div class="col-md-6 no-padding-margin">
       <B002ShoppingList></B002ShoppingList>
+    </div>
+    <div class="col-md-6 no-padding-margin">
       <B003RecipeBook></B003RecipeBook>
     </div>
   </div>
