propety binding start

--- a/myApp01/src/app/app.component.html
+++ b/myApp01/src/app/app.component.html
@@ -1,6 +1,8 @@
 <h1>I am the App component</h1>
 <hr />
-<!-- <div class="002"> -->
+<div class="002">
+  <A002TheBasics></A002TheBasics>
+</div>
 <!-- app-app0201 -->
 <!-- <App0201></App0201> -->
 
@@ -78,7 +80,7 @@
 <!-- <app-A004debugging></app-A004debugging> -->
 <!-- </div> -->
 
-<div class="005">
-  <!-- A005DatabindingDeepDiveComponent -->
-  <A005DatabindingDeepDive></A005DatabindingDeepDive>
-</div>
+<!-- <div class="005"> -->
+<!-- A005DatabindingDeepDiveComponent -->
+<!-- <A005DatabindingDeepDive></A005DatabindingDeepDive> -->
+<!-- </div> -->
