two binding start

--- a/myApp01/src/app/A002TheBasics/A002TheBasics.component.html
+++ b/myApp01/src/app/A002TheBasics/A002TheBasics.component.html
@@ -10,5 +10,13 @@
   <!-- <div class="B003ClassSelector"></div> -->
 
   <!-- B004OptionalAssignmentComponent -->
-  <B004OptionalAssignment></B004OptionalAssignment>
+  <!-- <B004OptionalAssignment></B004OptionalAssignment> -->
+
+  <!-- B005stringInterpolationComponent -->
+  <!-- <B005stringInterpolation></B005stringInterpolation> -->
+
+  <!-- B006PropertyBindingComponent -->
+  <!-- <B006PropertyBinding></B006PropertyBinding> -->
+  <!-- B007EventBindingComponent -->
+  <B007EventBinding></B007EventBinding>
 </div>
