--- a/myApp01/src/app/A002TheBasics/A002TheBasics.component.html
+++ b/myApp01/src/app/A002TheBasics/A002TheBasics.component.html
@@ -17,6 +17,37 @@
 
   <!-- B006PropertyBindingComponent -->
   <!-- <B006PropertyBinding></B006PropertyBinding> -->
+
   <!-- B007EventBindingComponent -->
-  <B007EventBinding></B007EventBinding>
+  <!-- <B007EventBinding></B007EventBinding> -->
+
+  <!-- B008PassingDataHtmlToTsComponent -->
+  <!-- <B008PassingDataHtmlToTs></B008PassingDataHtmlToTs> -->
+
+  <!-- B009twoWaybindingComponent -->
+  <!-- <B009twoWaybinding></B009twoWaybinding> -->
+
+  <!-- B010CombiningAllTypesOfBindingsComponent -->
+  <!-- <B010CombiningAllTypesOfBindings></B010CombiningAllTypesOfBindings> -->
+
+  <!-- B011CustomDirectiveDirective -->
+  <!-- <h2 B011CustomDirective>B011CustomDirectiveDirective</h2> -->
+
+  <!-- B012BNgIfDirectiveComponent -->
+  <!-- <B012BNgIfDirective></B012BNgIfDirective> -->
+
+  <!-- B013NgIfElseComponent -->
+  <!-- <B013NgIfElse></B013NgIfElse> -->
+
+  <!-- B014NgSwitchComponent -->
+  <!-- <B014NgSwitch></B014NgSwitch> -->
+
+  <!-- B015NgClassComponent -->
+  <!-- <B015NgClass></B015NgClass> -->
+
+  <!-- B016NgStyleComponent -->
+  <!-- <B016NgStyle></B016NgStyle> -->
+
+  <!-- B017NgForComponent -->
+  <B017NgFor></B017NgFor>
 </div>
