--- a/myApp01/src/app/A002TheBasics/A002TheBasics.component.html
+++ b/myApp01/src/app/A002TheBasics/A002TheBasics.component.html
@@ -49,5 +49,8 @@
   <!-- <B016NgStyle></B016NgStyle> -->
 
   <!-- B017NgForComponent -->
-  <B017NgFor></B017NgFor>
+  <!-- <B017NgFor></B017NgFor> -->
+
+  <!-- B018AssignmentComponent -->
+  <B018Assignment></B018Assignment>
 </div>
