--- a/myApp01/src/app/app.component.html
+++ b/myApp01/src/app/app.component.html
@@ -1,86 +1,12 @@
 <h1>I am the App component</h1>
 <hr />
-<div class="002">
-  <A002TheBasics></A002TheBasics>
+<div class="siva002">
+  <!-- <A002TheBasics></A002TheBasics> -->
 </div>
-<!-- app-app0201 -->
-<!-- <App0201></App0201> -->
+<div class="calculator">
+  <!-- 001 calculator -->
+  <!-- <A101Calc></A101Calc> -->
 
-<!-- app-app0202 -->
-<!-- <App0202></App0202> -->
-
-<!-- server App-server0301 -->
-<!-- <App-server0301></App-server0301> -->
-
-<!-- server App-server0302 -->
-<!-- <App-server0302></App-server0302> -->
-
-<!-- AttributeSelector04Component -->
-<!-- <div app-attribute-selector04></div> -->
-
-<!-- ClassSelector05Component -->
-<!--  <div class="app-class-selector05"></div>-->
-
-<!--  Documnet06Component-->
-<!--  <app-documnet06></app-documnet06>-->
-
-<!--  StringInterpolation07Component-->
-<!--  <app-string-interpolation07></app-string-interpolation07>-->
-
-<!--  PropertyBinding0701Component-->
-<!--  <app-property-binding0701></app-property-binding0701>-->
-
-<!--  EventBinding0702Component-->
-<!--  <app-event-binding0702></app-event-binding0702>-->
-<!--  PassingData0703Component-->
-<!--  <app-passing-data0703></app-passing-data0703>-->
-
-<!--  TwoWayBinding08Component-->
-<!--  <app-two-way-binding08></app-two-way-binding08>-->
-
-<!--  CombiningAllTypesOfBindings0802Component-->
-<!--  <app-combining-alltypes-of-bindings0802></app-combining-alltypes-of-bindings0802>-->
-
-<!--  Assignment0803Component-->
-<!--  <app-assignment0803></app-assignment0803>-->
-
-<!-- Directive09Component -->
-<!-- <h1 app-directive09>
-    Siva Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
-    corrupti, soluta natus dolores id facere dolorum saepe laborum mollitia.
-    Quidem corrupti magni iste iure nam obcaecati magnam at dignissimos dolor.
-  </h1> -->
-
-<!--  NgifDirective0901Component-->
-<!-- <app-NgifDirective0901></app-NgifDirective0901> -->
-
-<!-- NgIfThenElse0902Component -->
-<!-- <app-ngIfThenElse0902></app-ngIfThenElse0902> -->
-
-<!-- NgSwitch0903Component -->
-<!-- <app-ngSwitch0903></app-ngSwitch0903> -->
-
-<!-- NgStyleAndngClass0904Component -->
-<!-- <app-ngStyleAndngClass0904></app-ngStyleAndngClass0904> -->
-
-<!-- NgFor0905Component -->
-<!-- <app-ngFor0905></app-ngFor0905> -->
-
-<!-- Assignmnet10Component -->
-<!-- <app-Assignmnet10></app-Assignmnet10> -->
-<!-- </div> -->
-
-<!-- <div class="003 siva"> -->
-<!-- A003CourseProjectComponent -->
-<!-- <A003CourseProject></A003CourseProject> -->
-<!-- </div> -->
-
-<!-- <div class="004"> -->
-<!-- A004debuggingComponent -->
-<!-- <app-A004debugging></app-A004debugging> -->
-<!-- </div> -->
-
-<!-- <div class="005"> -->
-<!-- A005DatabindingDeepDiveComponent -->
-<!-- <A005DatabindingDeepDive></A005DatabindingDeepDive> -->
-<!-- </div> -->
+  <!-- A102CalculatorComponent -->
+  <A102Calculator></A102Calculator>
+</div>
