--- a/myApp01/src/app/A002TheBasics/B018Assignment/B018Assignment.component.html
+++ b/myApp01/src/app/A002TheBasics/B018Assignment/B018Assignment.component.html
@@ -25,7 +25,7 @@
     <div *ngFor="let timeValue of listOfTimeValues()">
       <button class="datetime-container">
         <span id="datetime"
-          >changed state to {{ !timeValue.toggleState }}
+          >changed visibily state to {{ !timeValue.toggleState }}
           {{ timeValue.timevalue.toLocaleString() }}</span
         >
       </button>
