--- a/myApp01/src/app/app.component.html
+++ b/myApp01/src/app/app.component.html
@@ -1,12 +1,12 @@
 <h1>I am the App component</h1>
 <hr />
 <div class="siva002">
-  <!-- <A002TheBasics></A002TheBasics> -->
+  <A002TheBasics></A002TheBasics>
 </div>
 <div class="calculator">
   <!-- 001 calculator -->
   <!-- <A101Calc></A101Calc> -->
 
   <!-- A102CalculatorComponent -->
-  <A102Calculator></A102Calculator>
+  <!-- <A102Calculator></A102Calculator> -->
 </div>
