--- a/myApp01/src/app/A100Project/A100Project.component.html
+++ b/myApp01/src/app/A100Project/A100Project.component.html
@@ -1,3 +1,8 @@
-<p>
-  A100Project works!
-</p>
+<div class="contrainer">
+  <B101HeaderComponent></B101HeaderComponent>
+  <div class="row">
+    <div class="col-lg-12">
+      <h2>I am working</h2>
+    </div>
+  </div>
+</div>
