--- a/myApp01/src/app/app.component.html
+++ b/myApp01/src/app/app.component.html
@@ -1,12 +1,26 @@
-<h1>I am the App component</h1>
-<hr />
-<div class="siva002">
+<!-- <h1>I am the App component</h1>
+<hr /> -->
+
+<!-- <div class="siva002">
   <A002TheBasics></A002TheBasics>
-</div>
+</div> -->
+
 <div class="calculator">
-  <!-- 001 calculator -->
   <!-- <A101Calc></A101Calc> -->
 
-  <!-- A102CalculatorComponent -->
   <!-- <A102Calculator></A102Calculator> -->
+
+  <A103UserForm></A103UserForm>
 </div>
+
+<!-- <div class="project">
+  <A100Project></A100Project>
+</div> -->
+
+<!-- <div class="debugging">
+  <A200Debugging></A200Debugging>
+</div> -->
+
+<!-- <div class="A300ComponentsDatabindingDeepDiveComponent">
+  <A300ComponentsDatabindingDeepDive></A300ComponentsDatabindingDeepDive>
+</div> -->
