--- a/myApp01/src/app/app.component.html
+++ b/myApp01/src/app/app.component.html
@@ -5,7 +5,7 @@
   <A002TheBasics></A002TheBasics>
 </div> -->
 
-<div class="calculator">
+<div class="calculator container-fluid">
   <!-- <A101Calc></A101Calc> -->
 
   <!-- <A102Calculator></A102Calculator> -->
