--- a/myApp01/src/app/A103UserData/A103UserData.component.html
+++ b/myApp01/src/app/A103UserData/A103UserData.component.html
@@ -1,47 +1,44 @@
-<div class="container-fluid mainbody">
+<div class="mainPage">
   <div class="loginPage" *ngIf="userNotLoggedIn()">
     <nav class="topbar">
       <h1><span>Login</span> Page</h1>
     </nav>
-    <div class="loginForm">
-      <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
-        <div class="form-group">
-          <label for="email">Name/Email</label>
-          <input
-            type="text"
-            id="email"
-            name="email"
-            autocomplete="email"
-            class="form-control"
-            [(ngModel)]="formData.email"
-            required
-          />
-        </div>
-
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input
-            type="password"
-            id="password"
-            name="password"
-            class="form-control"
-            autocomplete="off"
-            [(ngModel)]="formData.password"
-            required
-          />
-        </div>
-
-        <button
-          type="submit"
-          class="btn btn-primary"
-          [disabled]="loginForm.invalid"
-        >
-          Submit
-        </button>
-      </form>
+    <div class="loginFormConatiner">
+      <div class="loginForm">
+        <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
+          <div class="form-group">
+            <label for="email">Name/Email</label>
+            <input
+              type="text"
+              id="email"
+              name="email"
+              autocomplete="email"
+              class="form-control"
+              [(ngModel)]="formData.email"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input
+              type="password"
+              id="password"
+              name="password"
+              class="form-control"
+              autocomplete="off"
+              [(ngModel)]="formData.password"
+              required
+            />
+          </div>
+          <button
+            type="submit"
+            class="btn btn-danger"
+            [disabled]="loginForm.invalid"
+          >
+            Submit
+          </button>
+        </form>
+      </div>
     </div>
-  </div>
-  <div class="listView" *ngIf="userLoggedIn()">
-    <h1>hi</h1>
   </div>
 </div>
