--- a/myApp01/src/app/A103UserData/A103UserData.component.scss
+++ b/myApp01/src/app/A103UserData/A103UserData.component.scss
@@ -1,41 +1,74 @@
-.mainbody {
+.mainPage {
   height: 100%;
-  margin: 0%;
-  padding: 0%;
   width: 100%;
+  display: block;
+
   .loginPage {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     height: 100%;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
 
     .topbar {
-      flex: 0 0 20%; /* Take up 30% of the available height */
-      background-color: #f0f0f0;
+      height: 20%;
       width: 100%;
-      padding-block-start: 1%;
-      padding-inline-start: 1%;
+      transition: all 0.5s ease-in-out;
       display: flex;
-      justify-content: center;
       align-items: center;
-      transition: flex 0.5s ease; /* Smooth transition for flex property change */
-    }
-
-    @media only screen and (max-width: 600px) {
-      .topbar {
-        flex: 0 0 25%;
+      justify-content: center;
+      h1 {
+        margin: 0%;
       }
     }
 
-    .loginForm {
-      flex: 1; /* Take up remaining space */
-      background-color: #ffffff;
+    .loginFormConatiner {
+      height: 80%;
       width: 100%;
       display: flex;
       justify-content: center;
       align-items: center;
+    }
+
+    .loginForm {
+      width: 35%;
+      transition: all 0.5s ease-in-out;
+      display: block;
+
+      form {
+        margin: 10%;
+
+        div,
+        button {
+          margin: 2%;
+          margin-bottom: 5%;
+        }
+
+        button {
+          width: 96%;
+        }
+      }
+    }
+
+    @media screen and (max-width: 768px) {
+      .topbar {
+        height: 30%;
+        width: 100%;
+      }
+      .loginForm {
+        height: 70%;
+        width: 100%;
+      }
+
+      .topbar h1 {
+        font-size: 50px;
+      }
+    }
+
+    @media screen and (max-width: 300px) {
+      .topbar h1 {
+        font-size: xx-large;
+      }
     }
   }
 }
