--- a/myApp01/src/app/app.component.html
+++ b/myApp01/src/app/app.component.html
@@ -1,5 +1,10 @@
 <!-- <h1>I am the App component</h1>
 <hr /> -->
+<div class="background">
+  <div class="bg"></div>
+  <div class="bg bg2"></div>
+  <div class="bg bg3"></div>
+</div>
 
 <!-- <div class="siva002">
   <A002TheBasics></A002TheBasics>
