--- a/myApp01/src/app/A103UserData/A103UserData.component.html
+++ b/myApp01/src/app/A103UserData/A103UserData.component.html
@@ -1,7 +1,14 @@
 <div class="mainPage">
   <div class="loginPage" *ngIf="userNotLoggedIn()">
+    <div class="background">
+      <div class="bg"></div>
+      <div class="bg bg2"></div>
+      <div class="bg bg3"></div>
+    </div>
     <nav class="topbar">
-      <h1><span>Login</span> Page</h1>
+      <div class="Login-wrapper">
+        <div class="Login" data-Login="Login">Login Page</div>
+      </div>
     </nav>
     <div class="loginFormConatiner">
       <div class="loginForm">
@@ -34,6 +41,7 @@
             type="submit"
             class="btn btn-danger"
             [disabled]="loginForm.invalid"
+            class="button"
           >
             Submit
           </button>
