log in page version 002 completed

--- a/myApp01/src/app/A103UserData/A103UserData.component.html
+++ b/myApp01/src/app/A103UserData/A103UserData.component.html
@@ -1,10 +1,114 @@
 <div class="mainPage">
   <div class="loginPage">
     <nav class="topBar">
-      <h1>login Page</h1>
+      <h1>Welcome</h1>
     </nav>
     <section class="loginFormConatiner">
-      <div class="loginForm">kk</div>
+      <div class="loginForm">
+        <form (ngSubmit)="onSubmit()" #loginForm="ngForm" class="form">
+          <div class="form-group">
+            <label for="username">Username</label>
+            <input
+              type="text"
+              id="username"
+              name="username"
+              class="form-control"
+              [(ngModel)]="formData.email"
+              #usernameField="ngModel"
+              required
+            />
+            <div
+              *ngIf="usernameField.invalid && usernameField.touched"
+              class="text-danger"
+            >
+              Username is required
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input
+              type="password"
+              id="password"
+              name="password"
+              class="form-control"
+              [(ngModel)]="formData.password"
+              #passwordField="ngModel"
+              required
+            />
+            <div
+              *ngIf="passwordField.invalid && passwordField.touched"
+              class="text-danger"
+            >
+              Password is required
+            </div>
+          </div>
+
+          <div class="buttonContainer">
+            <button
+              type="Login"
+              class="btn btn-primary"
+              [disabled]="loginForm.invalid"
+            >
+              Login
+            </button>
+          </div>
+        </form>
+      </div>
     </section>
+    <div class="background">
+      <div class="bubbles">
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+      </div>
+    </div>
   </div>
 </div>
