--- a/myApp01/src/app/A103UserData/A103UserData.component.scss
+++ b/myApp01/src/app/A103UserData/A103UserData.component.scss
@@ -4,24 +4,35 @@
   height: 100%;
   width: 100%;
   display: block;
-  background-color: green;
-  padding: 3px;
-  overflow: hidden;
+  padding: 4px;
 
   * {
-    // div {
-    //   outline: solid 1px aquamarine;
-    //   box-sizing: border-box;
-    // }
-    outline: solid 1px aquamarine;
+    .buttonContainer {
+      //   outline: solid 1px aquamarine;
+      box-sizing: border-box;
+    }
+    // outline: solid 1px aquamarine;
     box-sizing: border-box;
-    overflow: hidden;
   }
 
   .loginPage {
     height: 100%;
     width: 100%;
     background-color: aliceblue;
+    overflow: hidden;
+    background: #1a1e23;
+    $bubble-count: 50;
+    $sway-type: "sway-left-to-right", "sway-right-to-left";
+
+    @function random_range($min, $max) {
+      $rand: random();
+      $random_range: $min + floor($rand * (($max - $min) + 1));
+      @return $random_range;
+    }
+
+    @function sample($list) {
+      @return nth($list, random(length($list)));
+    }
 
     .topBar {
       width: inherit;
@@ -30,18 +41,22 @@
       justify-content: center;
       align-items: center;
       transition: all 0.5s ease-in-out;
+      * {
+        z-index: 10;
+      }
+
       h1 {
         color: transparent;
         background-clip: text;
         -webkit-background-clip: text;
-        background-image: radial-gradient(ellipse, #553c9a, #ee4b2b);
+        background-image: radial-gradient(ellipse, #9188ac, #eed1cc);
         font-weight: bolder;
         font-family: Georgia, "Times New Roman", Times, serif;
         font-size: 4rem;
+        transition: all 0.5s ease-in-out;
 
         &:hover {
           cursor: pointer;
-          transition: background-image 3s ease-out;
           -webkit-text-stroke: 1px rgb(193, 27, 27);
           background-image: linear-gradient(
             to right top,
@@ -52,13 +67,18 @@
             #a8eb12
           );
         }
+
+        @include maxWidth(md) {
+          font-size: 3rem;
+        }
+
+        @include maxWidth(sm) {
+          font-size: 2rem;
+        }
       }
 
       @include maxWidth(md) {
         height: 30%;
-        h1 {
-          font-size: 3rem;
-        }
       }
     }
 
@@ -70,22 +90,147 @@
       justify-content: center;
       align-items: center;
       transition: all 0.5s ease-in-out;
+      * {
+        z-index: 10;
+      }
 
       .loginForm {
         width: 35%;
         height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .form {
+          width: 80%;
+
+          .text-danger {
+            font-size: large;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            background-color: transparent;
+            font-weight: bold;
+          }
+
+          label {
+            font-size: larger;
+            font-weight: bold;
+            font-style: italic;
+            color: lightcyan;
+            margin-top: 1rem;
+          }
+
+          .buttonContainer {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            align-content: center;
+            margin-top: 1rem;
+            button {
+              width: 100%;
+              z-index: 2;
+              font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+              &:active {
+                background-color: white;
+                color: #009cff;
+                font-weight: bold;
+              }
+            }
+          }
+
+          @include maxWidth(lg) {
+            width: 100%;
+          }
+        }
+
+        @include maxWidth(lg) {
+          width: 60%;
+        }
+
+        @include maxWidth(md) {
+          width: 90%;
+        }
+
+        @include maxWidth(sm) {
+          width: 100%;
+        }
       }
 
       @include maxWidth(md) {
         height: 70%;
-        .loginForm {
-          width: 90%;
+      }
+    }
+
+    .background {
+      transform: translateY(-700px);
+    }
+
+    .bubbles {
+      position: relative;
+      width: 100%;
+      height: 100vh;
+      overflow: hidden;
+
+      .bubble {
+        position: absolute;
+        left: var(--bubble-left-offset);
+        bottom: -75%;
+        display: block;
+        width: var(--bubble-radius);
+        height: var(--bubble-radius);
+        border-radius: 50%;
+        animation: float-up var(--bubble-float-duration)
+          var(--bubble-float-delay) ease-in infinite;
+
+        &::before {
+          position: absolute;
+          content: "";
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background: hsla(183, 94%, 76%, 0.3);
+          border-radius: inherit;
+          animation: var(--bubble-sway-type) var(--bubble-sway-duration)
+            var(--bubble-sway-delay) ease-in-out alternate infinite;
+        }
+
+        @for $i from 0 through $bubble-count {
+          &:nth-child(#{$i}) {
+            --bubble-left-offset: #{random_range(0vw, 100vw)};
+            --bubble-radius: #{random_range(1vw, 10vw)};
+            --bubble-float-duration: #{random_range(6s, 12s)};
+            --bubble-sway-duration: #{random_range(4s, 6s)};
+            --bubble-float-delay: #{random_range(0s, 4s)};
+            --bubble-sway-delay: #{random_range(0s, 4s)};
+            --bubble-sway-type: #{sample($sway-type)};
+          }
         }
       }
 
-      @include maxWidth(sm) {
-        .loginForm {
-          width: 100%;
+      @keyframes float-up {
+        to {
+          transform: translateY(-175vh);
+        }
+      }
+
+      @keyframes sway-left-to-right {
+        from {
+          transform: translateX(-100%);
+        }
+
+        to {
+          transform: translateX(100%);
+        }
+      }
+
+      @keyframes sway-right-to-left {
+        from {
+          transform: translateX(100%);
+        }
+
+        to {
+          transform: translateX(-100%);
         }
       }
     }
